Update for Maps app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="map" style="height: 100%;"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJh0Mz6idD05pzfn51hA-TAw-mAZCU&callback=Function.prototype"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=gmaps_api_key=Function.prototype"></script>
     <script type="module" src="./src/index.ts"></script>
 </body>
 </html>
